# Pacman

./: AStar.cpp  AStar.h  Backtracking.cpp  Backtracking.h  Blocks.cpp  Blocks.h  CMakeLists.txt  Dificulties_Window.cpp  Dificulties_Window.h  Dots.cpp  Dots.h  Doxyfile  Game.cpp  Game.h  GameOver.cpp  GameOver.h  GameWin.cpp  GameWin.h  Ghost.cpp  Ghost.h  Ghost2.cpp  Ghost2.h  Ghost3.cpp  Ghost3.h  Ghost4.cpp  Ghost4.h  Levels.cpp  Levels.h  Main_Window.cpp  Main_Window.h  Pac_Man.cpp  Pac_Man.h  README.md  Resources.qrc  StarList.cpp  StarList.h  StarNode.cpp  StarNode.h  SuperDot.cpp  SuperDot.h  (+3 more)
Tutoria/: settings.gradle
Tutoria/app/: build.gradle
doxygen_docs/html/: AStar_8h_source.html  Backtracking_8h_source.html  Blocks_8h_source.html  Dificulties__Window_8h_source.html  Dots_8h_source.html  GameOver_8h_source.html  GameWin_8h_source.html  Game_8h_source.html  Ghost2_8h_source.html  Ghost3_8h_source.html  Ghost4_8h_source.html  Ghost_8h_source.html  Pac__Man_8h_source.html  StarList_8h_source.html  StarNode_8h_source.html  SuperDot_8h_source.html  annotated.html  classAStar-members.html  classAStar.html  classBacktracking-members.html  classBacktracking.html  classBlock-members.html  classBlock.html  classBlock__coll__graph.map  classBlock__inherit__graph.md5  classDificulties__Window-members.html  classDificulties__Window.html  classDificulties__Window__coll__graph.md5  classDificulties__Window__inherit__graph.map  classDot-members.html  classDot.html  classDot__coll__graph.md5  classDot__inherit__graph.map  classGame-members.html  classGame.html  classGameOver-members.html  classGameOver.html  classGameOver__coll__graph.map  classGameOver__coll__graph.md5  classGameWin-members.html  (+69 more)
doxygen_docs/latex/: annotated.tex  classAStar.tex  classBacktracking.tex  classBlock.tex  classBlock__coll__graph.md5  classDificulties__Window.tex  classDificulties__Window__coll__graph.md5  classDot.tex  classDot__coll__graph.md5  classGame.tex  classGameOver.tex  classGameOver__inherit__graph.md5  classGameWin.tex  classGameWin__inherit__graph.md5  classGame__coll__graph.md5  classGame__inherit__graph.md5  classGhost.tex  classGhost2.tex  (+21 more)
(+51 files in other folders)
